--- a/blog.html
+++ b/blog.html
@@ -11,33 +11,33 @@
 </head>
 
 <body>
-    <header class="hero" >
+    <header class="hero">
         <nav class="container">
-            <div >
+            <div class="nav_logo">
                 <h2 class="nav_title">Titulo</h2>
             </div>
-            <ul class="head_link head_link-menu">
-                <li class="nav_item"><a href="./inicio.html" class="nav_link">Inicio</a></li>
-                <li class="nav_item"><a href="./acercade.html" class="nav_link">Acerca de</a></li>
-                <li class="nav_item"><a href="./contacto.html" class="nav_link">Contacto</a></li>
-                <li class="nav_item"><a href="./blog.html" class="nav_link">Blog</a></li>
+            <ul class="head_link">
+                <!-- <ul class="nav_link nav_link-menu"></ul> -->
+                <li class="nav_item"><a href="#" class="nav_link">Inicio</a></li>
+                <li class="nav_item"><a href="#" class="nav_link">Acerca de</a></li>
+                <li class="nav_item"><a href="#" class="nav_link">Contacto</a></li>
+                <li class="nav_item"><a href="#" class="nav_link">Blog</a></li>
                 <img src="./img/close.svg" class="nav_close" alt="icono cierre menu">
             </ul>
             <div class="nav_menu">
                 <img src="./img/menu.svg" alt="icono menu responsivo" class="nav_img">
             </div>
         </nav>
-        <section class="container hero_container ">
+        <section class="hero_container container">
             <h1 class="hero_title">Aprende CSS3 desde 0 hasta dominarlo</h1>
             <p class="hero_parrafo">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Sint nam tenetur, eum
                 deserunt voluptatibus debitis tempore voluptatum adipisci ad eius, distinctio similique cum. Aperiam
                 neque dolorum natus et ea repellendus.</p>
-            <a href="#" class="cta">Comenzar ahora</a>
         </section>
     </header>
     <main>
         </section>
-        <section class="container about" >
+        <section class="container about">
             <h2 class="about subtitle"> Que aprendera en este curso</h2>
             <p class="about_parrafo">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Debitis earum voluptatem
                 nihil, itaque officiis veritatis!</p>
@@ -45,7 +45,7 @@
                 <article class="about_icons">
                     <img class="about_img" src="./img/shapes.svg" alt="icono de css">
                     <!-- <img class="about_icon" src="./img/shapes.svg" alt="icono de css"> -->
-                    <h3 class="about_title">CSS Layouts</h3>
+                    <h3 class="about_title" >CSS Layouts</h3>
                     <p class="about_parrafo">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Adipisci enim
                         nam eaque necessitatibus tempore nesciunt.</p>
                 </article>
@@ -72,10 +72,10 @@
                         quibusdam voluptates nemo eos delectus ut reprehenderit labore explicabo, quasi quia hic ad
                         impedit
                         quae.</p>
-                    <a href="basico.html" class="cta">entra al curso</a>
+                    <a href="#" class="cta">entra al curso</a>
                 </div>
-                <figure class="knowledge_picture" alt="computador">
-                    <img src="./img/macbook.png" alt="imagen macbook" class="knowledge_img">
+                <figure class="knowledge_picture">
+                    <img src="./img/macbook.png" alt="imagen de ordenador" class="knowledge_img">
                 </figure>
             </div>
         </section>
@@ -90,18 +90,17 @@
                         <p class="price_features">features</p>
                         <p class="price_features">responsive</p>
                     </div>
-                    <a href="#grid.html" class="price_cta">inicia ahora</a>
+                    <a href="#" class="price_cta">inicia ahora</a>
                 </div>
-                <!-- <div class="price_element_best"> -->
-                    <div class="price_element price_element_best">
-                    <p class="price_name ">Grid</p>
+                <div class="price_element">
+                    <p class="price_name">Dir</p>
                     <h3 class="price_price">60 euro/mes</h3>
                     <div class="price_items">
                         <p class="price_features">grit</p>
                         <p class="price_features">implicit grit</p>
                         <p class="price_features">grit responsive</p>
                     </div>
-                    <a href="#animaciones.html" class="price_cta">inicia ahora</a>
+                    <a href="#" class="price_cta">inicia ahora</a>
                 </div>
                 <div class="price_element">
                     <p class="price_name">Animaciones</p>
@@ -118,53 +117,52 @@
         <section class="testimony">
             <div class="container testimony_container">
                 <img src="./img/leftarrow.svg" alt="flcha hacia abajo" class="testimony_arrow" id="antes">
-                <section class="testimony_body testimony_body-show" data-id="1">
+                <section class="testimony_body">
                     <div class="testimony_text">
-                        <h2 class="subtitle">Mi nombre es John Doe <span class="testimony_course">Estudiante de
-                                CSS</span>
+                        <h2 class="subtitle">Mi nombre es John Doe <span class="testimony_user">Estudiante de CSS</span>
                         </h2>
                         <p class="testimony_review">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Tenetur
                             voluptatem mollitia rerum, numquam quasi ipsum quae sit, odio tempora, consectetur quos
                             dolorem! Neque laborum consectetur corporis deleniti voluptatem quaerat officiis!</p>
                     </div>
-                    <figure class="testimony_picture" alt="foto">
+                    <figure class="testimony_picture">
                         <img src="./img/face.jpg" alt="foto de alumno" class="testimony_img">
                     </figure>
                 </section>
-                <section class="testimony_body " data-id="2">
+                <section class="testimony_body">
                     <div class="testimony_text">
-                        <h2 class="subtitle">Mi nombre es John Wick<span class="testimony_course">Estudiante de
+                        <h2 class="subtitle">Mi nombre es John Wick<span class="testimony_user">Estudiante de
                                 UIC/UCS</span></h2>
                         <p class="testimony_review">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nulla
                             doloremque perferendis est facere laborum, necessitatibus sed excepturi quasi dolorum dicta
                             blanditiis distinctio quis magni corporis ipsam dolores reiciendis sequi. Repellendus.</p>
                     </div>
-                    <figure class="testimony_picture" alt="foto">
+                    <figure class="testimony_picture">
                         <img src="./img/face2.jpg" alt="foto de alumno" class="testimony_img">
                     </figure>
                 </section>
-                <section class="testimony_body " data-id="3">
+                <section class="testimony_body">
                     <div class="testimony_text">
-                        <h2 class="subtitle"> Mi nombre es Jane Doe <span class="testimony_course">Estudiante de
+                        <h2 class="subtitle"> Mi nombre es Jane Doe <span class="testimony_user">Estudiante de
                                 Fromet</span></h2>
                         <p class="testimony_review">Lorem ipsum dolor sit amet consectetur adipisicing elit. Veniam modi
                             fugiat at numquam debitis omnis vero porro, eius ut quam sit dignissimos. Tenetur nam vel
                             nostrum numquam at?</p>
                     </div>
-                    <figure class="testimony_picture" alt="foto">
+                    <figure class="testimony_picture">
                         <img src="./img/face3.jpg" alt="foto de alumno" class="testimony_img">
                     </figure>
                 </section>
-                <section class="testimony_body " data-id="4">
+                <section class="testimony_body">
                     <div class="testimony_text">
-                        <h2 class="subtitle"> Mi nombre es Juan Nadie <span class="testimony_course">Estudiante de
+                        <h2 class="subtitle"> Mi nombre es Juan Nadie <span class="testimony_user">Estudiante de
                                 CSS</span>
                         </h2>
                         <p class="testimony_review">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quam
                             molestias quas illo. Fugiat, recusandae explicabo animi magnam, beatae laboriosam deserunt,
                             quas inventore possimus iure sapiente.</p>
                     </div>
-                    <figure class="testimony_picture" alt="foto">
+                    <figure class="testimony_picture">
                         <img src="./img/face4.jpg" alt="foto de alumno" class="testimony_img">
                     </figure>
                 </section>
@@ -173,7 +171,7 @@
         </section>
         <section class="container questions">
             <h2 class="subtitle">Preguntas frecuentes</h2>
-            <p class="questions_parrafo">Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis quisquam
+            <p class="cuestions_parrafo">Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis quisquam
                 incidunt nam.</p>
             <section class="questions_container">
                 <article class="questions_padding">
@@ -214,7 +212,7 @@
                     </div>
                 </article>
             </section>
-            <section class="questions_offer">
+            <section class="">
                 <h2 class="subtitle">Estas listo para aprender css</h2>
                 <p class="questions_copy">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Exercitationem
                     accusamus magnam ad. Sit at sed quos quam eum voluptatem suscipit doloribus qui sint, perferendis
@@ -227,14 +225,14 @@
         <section class="container footer_container">
             <nav class="nav_footer">
                 <h2 class="footer_title">Curso CSS</h2>
-                <ul class="head_link nav-link_footer">
-                    <li class="nav_item"><a href="./inicio.html" class="nav_link">Inicio</a></li>
-                    <li class="nav_item"><a href="./acercade.html" class="nav_link">Acerca de</a></li>
-                    <li class="nav_item"><a href="./contacto.html" class="nav_link">Contacto</a></li>
-                    <li class="nav_item"><a href="./blog.html" class="nav_link">Blog</a></li>
+                <ul class="nav-link nav-link_footer">
+                    <li class="nav_item"><a href="#" class="nav_link">Inicio</a></li>
+                    <li class="nav_item"><a href="#" class="nav_link">Acerca de</a></li>
+                    <li class="nav_item"><a href="#" class="nav_link">Contacto</a></li>
+                    <li class="nav_item"><a href="#" class="nav_link">Blog</a></li>
                 </ul>
             </nav>
-            <form class="footer_form" action="" method="post" >
+            <form class="footer_form" action="" method="post">
                 <h2 class="footer_newsletter">Suscribete a newsletter</h2>
                 <div class="footer_inputs">
                     <input type="text" class="footer_input" name="e-mail" placeholder="e-mail" required>
