--- a/contacto.html
+++ b/contacto.html
@@ -11,7 +11,7 @@
 </head>
 
 <body>
-    <header class="hero fondo_contacto">
+    <header class="hero">
 
         <nav class="container">
 
@@ -20,7 +20,7 @@
             </div>
             <ul class="head_link head_link-menu">
                 <li class="nav_item"><a href="./inicio.html" class="nav_link">Inicio</a></li>
-                <li class="nav_item"><a href="./acercad.html" class="nav_link">Acerca de</a></li>
+                <li class="nav_item"><a href="./acercade.html" class="nav_link">Acerca de</a></li>
                 <li class="nav_item"><a href="./contacto.html" class="nav_link">Contacto</a></li>
                 <li class="nav_item"><a href="./blog.html" class="nav_link">Blog</a></li>
                 <img src="./img/close.svg" class="nav_close" alt="icono cierre menu">
@@ -29,6 +29,35 @@
                 <img src="./img/menu.svg" alt="icono menu responsivo" class="nav_img">
             </div>
         </nav>
+
+    </header>
+    <main>
+        <section class="container about" id="acercade">
+            <h2 class="about subtitle">Quienes somos</h2>
+            <p class="about_parrafo">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Debitis earum voluptatem
+                nihil, itaque officiis veritatis!</p>
+            <div class="about_main">
+                <article class="about_icons">
+                    <img class="about_img" src="./img/shapes.svg" alt="icono de css">
+                    <!-- <img class="about_icon" src="./img/shapes.svg" alt="icono de css"> -->
+                    <h3 class="about_title">CSS Layouts</h3>
+                    <p class="about_parrafo">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Adipisci enim
+                        nam eaque necessitatibus tempore nesciunt.</p>
+                </article>
+                <article class="about_icons">
+                    <img class="about_img" src="./img/paint.svg" alt="icono de animaciones">
+                    <h3 class="about_title">Animaciones</h3>
+                    <p class="about_parrafo">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsa nostrum sunt
+                        cum, alias ullam laborum velit!</p>
+                </article>
+                <article class="about_icons">
+                    <img class="about_img" src="./img/code.svg" alt="icono de sas">
+                    <h3 class="about_title">SASS</h3>
+                    <p class="about_parrafo">Lorem ipsum dolor sit amet consectetur adipisicing elit. Unde error
+                        voluptate blanditiis neque dolorum.</p>
+                </article>
+            </div>
+        </section>
         <section class="container hero_container ">
             <h1 class="hero_title">Aprende CSS3 desde 0 hasta dominarlo</h1>
             <p class="hero_parrafo">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Sint nam tenetur, eum
@@ -36,9 +65,6 @@
                 neque dolorum natus et ea repellendus.</p>
 
         </section>
-    </header>
-    <main>
-
         <section class="knowledge">
             <div class="container knowledge_container">
                 <div class="knowledge_text">
