--- a/acercade.html
+++ b/acercade.html
@@ -65,7 +65,7 @@
         <section class="knowledge">
             <div class="container knowledge_container">
                 <div class="knowledge_text">
-                    <h2 class="subtitle">Curso completo de css domina css de una vez por todas</h2>
+                    <h2 class="subtitle">El personal mas cualificado</h2>
                     <p class="knowledge_parrafo">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Consectetur
                         error
                         quibusdam voluptates nemo eos delectus ut reprehenderit labore explicabo, quasi quia hic ad
@@ -78,41 +78,7 @@
                 </figure>
             </div>
         </section>
-        <section class="container price">
-            <h2 class="subtitle">Obten el plan perfecto para aprender</h2>
-            <div class="price_table">
-                <div class="price_element">
-                    <p class="price_name">Basico</p>
-                    <h3 class="price_price">Free</h3>
-                    <div class="price_items">
-                        <p class="price_features">elements</p>
-                        <p class="price_features">features</p>
-                        <p class="price_features">responsive</p>
-                    </div>
-                    <a href="#grid.html" class="price_cta">inicia ahora</a>
-                </div>
-                <div class="price_element">
-                    <p class="price_name">Grid</p>
-                    <h3 class="price_price">60 euro/mes</h3>
-                    <div class="price_items">
-                        <p class="price_features">grit</p>
-                        <p class="price_features">implicit grit</p>
-                        <p class="price_features">grit responsive</p>
-                    </div>
-                    <a href="#animaciones.html" class="price_cta">inicia ahora</a>
-                </div>
-                <div class="price_element">
-                    <p class="price_name">Animaciones</p>
-                    <h3 class="price_price">60 euro/mes</h3>
-                    <div class="price_items">
-                        <p class="price_features">animation</p>
-                        <p class="price_features">transition</p>
-                        <p class="price_features">render website</p>
-                    </div>
-                    <a href="#" class="price_cta">inicia ahora</a>
-                </div>
-            </div>
-        </section>
+        
         <section class="testimony">
             <div class="container testimony_container">
                 <img src="./img/leftarrow.svg" alt="flcha hacia abajo" class="testimony_arrow" id="antes">
